test/classes/errors/nilability-generate.notest
This is a script to generate tests.
